--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
     <model-viewer id="model-viewer"
                   src="Buehne.glb"
-                  ios-src="Buehne.usdc"
+                  ios-src="Buehne.usdz"
                   alt="The Portal"
                   ar
                   ar-modes="webxr scene-viewer quick-look"
