--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background: url('your-background-image.jpg') no-repeat center center fixed; /* Replace with your image path */
+            background: url('Render.png') no-repeat center center fixed; /* Replace with your image path */
             background-size: cover;
             color: white;
             transition: background-color 0.1s;
