--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             padding: 20px;
             color: white;
             overflow-y: auto;
-            background: url('Render.png') no-repeat center center fixed;
+            background: url('Render.jpg') no-repeat center center fixed;
             background-size: cover; /* Ensure background covers the entire container */
         }
         model-viewer {
