--- a/index.html
+++ b/index.html
@@ -27,22 +27,15 @@
             margin-bottom: 20px; /* Increased margin */
         }
         .ar-button {
-            background-color: black;
-            color: white;
-            padding: 15px 30px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            outline: none;
-            border-radius: 5px;
+            display: none; /* Hide the original AR button */
+        }
+        .headline {
+            font-family: 'Times New Roman', Times, serif; /* Changed font family */
+            font-size: 28px; /* Increased font size */
+            font-weight: bold;
             text-align: center;
             margin-bottom: 30px; /* Increased margin */
-        }
-        .ar-button:hover {
-            background-color: white;
-            color: black;
-            box-shadow: 0 0 10px rgba(0,0,0,0.5);
-            transform: scale(1.1);
+            color: white; /* Ensuring headline is visible on the background */
         }
         #display-text {
             text-align: center;
@@ -58,26 +51,23 @@
             margin-bottom: 30px; /* Increased margin */
         }
         #play-button {
-            background-color: #1a1c1a;
+            background-color: transparent;
             color: white;
-            border: none;
+            border: 2px solid white; /* Added white outline */
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
             border-radius: 5px;
             margin-bottom: 30px; /* Increased margin */
+            transition: all 0.3s ease;
         }
         #play-button:hover {
-            background-color: #2d2f30;
+            background-color: white;
+            color: black;
         }
         #instagram-link {
             margin-top: 30px; /* Increased margin */
             text-align: center;
-        }
-        .headline {
-            font-size: 24px; /* Adjust headline font size */
-            font-weight: bold;
-            margin-bottom: 30px; /* Increased margin */
         }
 
         /* Media Query for Tablets and Mobile */
@@ -111,14 +101,6 @@
                   animation-loop>
     </model-viewer>
 
-    <button class="ar-button" id="ar-button" onclick="activateAR()">Open AR-Model</button>
-
-    <audio id="audio-player">
-        <source src="Buehneaudio.ogg" type="audio/ogg">
-        <source src="Buehneaudio.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-    
     <button id="play-button">Play audio first</button>
 
     <p id="display-text">
